Revert "more stable and faster toolwindow manager initialization"
This reverts commit c5292eb33104c78b97bd3977be2c6cb6f468c439.

GitOrigin-RevId: fcc323aad7fa913cd28c68879148722c8dad3c08